Improve debugging experience.
Log messages can now be associated with a connectionId/channelId to
correlate log messages across multiple invocations.

[resolves #83]